# price-prediction

./: README.md  mlartifacts.dvc  mlflow.db.dvc  pyproject.toml  requirements.txt
.dvc/: config
notebooks/: cpp-eda.ipynb  cpp-inspect.ipynb
src/price_prediction/: evaluate.py  ingest.py  pipeline.py  predict.py  train.py  utils.py
src/price_prediction/artifacts/: pipeline.md
src/price_prediction/artifacts/pipeline_v1/: features_v1.txt  pipeline_v1.joblib  pipeline_v1.md
src/price_prediction/artifacts/pipeline_v2/: features_v2.json  pipeline_v2.joblib  pipeline_v2.md
src/price_prediction/artifacts/pipeline_v3/: features_v3.json  features_v3.txt  pipeline_v3.joblib  pipeline_v3.md
src/price_prediction/config/: config.py  country.py
src/price_prediction/data/: prepared.dvc  raw.dvc
src/price_prediction/metrics/: sl_metrics.csv
src/price_prediction/mlflow/: add_pipeline.py  baseline.py  eval_pipeline_v1.py  shortlist.py  tune.py
tests/: test_predict.py
