[project]
name = "price-prediction"
version = "0.1.0"
description = "A regression model trained on Car Price Prediction dataset from Kaggle"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name="babaksoft", email="babak.eslamieh@gmail.com" },
]
keywords = ["machine learning", "classification"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license-files = ["LICEN[CS]E*"]

dependencies = [
"numpy==2.4.0",
"scipy==1.16.3",
"pandas==2.3.3",
"matplotlib==3.10.8",
"scikit-learn==1.8.0",
"seaborn==0.13.2",
"pytest==9.0.2",
"joblib==1.5.3",
"mlflow==3.8.1",
"mlflow-skinny==3.8.1",
"psycopg2-binary==2.9.11",
"fastapi[standard]==0.128.0",
"uvicorn==0.40.0",
"pydantic==2.12.5",
"streamlit==1.52.2",
"requests==2.32.5",
"tqdm==4.67.1"
]

[project.urls]
Homepage = "https://github.com/babaksoft/price-prediction"
Issues = "https://github.com/babaksoft/price-prediction/issues"

[project.optional-dependencies]
build = ["build"]
dev = ["pytest"]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    "/.dvc",
    "**/*.dvc",
    "**/.gitignore",
    "/notebooks",
    "/tests",
    ".gitignore",
    ".dvcignore",
    "requirements.txt"
]
